# xray-16

./: .gitmodules  CMakeLists.txt
cmake/: utils.cmake
sdk/include/glad/: gl.c
sdk/include/nvapi/: nvapi.h
src/Include/xrRender/: Kinematics.h  KinematicsAnimated.h  ParticleCustom.h
src/Layers/xrAPI/: CMakeLists.txt
src/Layers/xrRender/: D3DXRenderBase.cpp  LightTrack.cpp  LightTrack.h  ShaderResourceTraits.h  SkeletonX.cpp  SkeletonX.h  dxImGuiRender.cpp  dxImGuiRender.h  dxParticleCustom.cpp  r__occlusion.cpp
src/Layers/xrRenderGL/: glHW.cpp
src/Layers/xrRenderPC_GL/: CMakeLists.txt  r2_test_hw.cpp  rgl_shaders.cpp
src/Layers/xrRenderPC_R4/: CMakeLists.txt
src/Layers/xrRender_R2/: r2.cpp
src/utils/xrMiscMath/: CMakeLists.txt
src/xrAICore/: CMakeLists.txt
src/xrCDB/: CMakeLists.txt  ISpatial.cpp  ISpatial.h
src/xrCore/: CMakeLists.txt  LocatorAPI.cpp  LocatorAPI.h  ModuleLookup.cpp  _math.cpp  log.cpp  xrCore.cpp  xrDebug.cpp  xr_types.h
src/xrCore/XML/: XMLDocument.cpp
src/xrEngine/: CMakeLists.txt  Device_Initialize.cpp  XR_IOConsole_get.cpp  device.h  x_ray.cpp  xr_ioc_cmd.cpp  xr_ioc_cmd.h  xr_object.h  xr_object_list.cpp
src/xrGame/: CMakeLists.txt  ParticlesObject.cpp  UITimeDilator.h  hit_immunity.cpp  server_entity_wrapper.cpp
src/xrGame/ui/: UICDkey.cpp  UICellCustomItems.cpp  UICellCustomItems.h
src/xrGameSpy/: CMakeLists.txt
src/xrMaterialSystem/: CMakeLists.txt
src/xrNetServer/: CMakeLists.txt
src/xrParticles/: CMakeLists.txt
src/xrPhysics/: CMakeLists.txt
src/xrScriptEngine/: CMakeLists.txt  script_engine.cpp
src/xrServerEntities/: script_value_container.h  xml_str_id_loader.h  xrServer_Object_Base.h  xrServer_Objects_Abstract.h
src/xrSound/: CMakeLists.txt  Sound.h  SoundRender_Core.cpp  SoundRender_Core.h  SoundRender_Emitter_StartStop.cpp  SoundRender_Source.cpp  SoundRender_Source.h  SoundRender_TargetA.cpp
src/xrUICore/: CMakeLists.txt
src/xr_3da/: CMakeLists.txt  entry_point.cpp  vulkan_loader.c
